--- a/ui/static/css/base.css
+++ b/ui/static/css/base.css
@@ -1,5 +1,6 @@
 body {
-	font-family: "arial",sans-serif;
+    font-family: "arial",sans-serif;
+    background-image: url('/static/img/body.jpg');
     background-color: #ff6600;
 }
 
