--- a/ui/templates/registration/registration_form.html
+++ b/ui/templates/registration/registration_form.html
@@ -38,11 +38,11 @@
       {% endif %}
       {{ form.password2 }}
     </p>
-    <p>By clicking submit below and creating an account, you are agreeing to the <a href="/aup/">GoalFish Acceptable Use Policy</a>, so take a few minutes and read it.</p>
+    <p>By clicking submit below and creating an account, you are agreeing to the <a href="/membership-policy/">Hack.RVA Membership Policy</a>, so take a few minutes and read it.</p>
     <p class="submit"><input type="submit" value="Register"></p>
   </form>
   </div>
-  
+
 {% endblock %}
 
 {% block content-related %}
