getting closer to a release 1

--- a/ui/static/css/base.css
+++ b/ui/static/css/base.css
@@ -5,9 +5,9 @@ body {
 }
 
 #wrapper {
-	margin: 0px auto;
-	width: 800px;
-	background-color: #6699ff;
+    margin: 0px auto;
+    width: 800px;
+    background-color: #b99c6b;
     padding: 20px;
 }
 
