adding profile auto-create abilities

--- a/ui/templates/members/index.html
+++ b/ui/templates/members/index.html
@@ -20,16 +20,17 @@
 <img src="/static/img/front_door.jpg" alt="front door" style="margin-bottom: 30px;"/>
 <div style="float: right; clear: none; width: 320px; text-align: center; margin-bottom: 10px;">
 <a href="#about" class="fancybox"><div class="box raised infoblock" style="border: 1px solid #e1d4c0; padding-top: 5px; padding-bottom: 5px; margin-bottom: 10px;"><h4>What is hack.rva?</h4></div></a>
-<div class="box raised infoblock" style="border: 1px solid #e1d4c0;
-padding-top: 5px; padding-bottom: 5px; margin-bottom: 10px;"><h4>What's Coming Up?</h4></div>
-<div class="box raised infoblock" style="border: 1px solid #e1d4c0; padding-top: 5px; padding-bottom: 5px;"><h4>How Do I Join?</h4></div>
+<a href="#join" class="fancybox"><div class="box raised infoblock" style="border: 1px solid #e1d4c0; padding-top: 5px; padding-bottom: 5px;"><h4>How Do I Join?</h4></div></a>
 </div>
 <div id="checkbox_wrapper" class="box raised" style="border: 1px solid; padding: 10px;">
-<h3>Learning doesn't stop when the bell rings.</h3>
-<div class="check_box">Set your own learning goals</div>
-<div class="check_box">Connect with your communities to help you reach your goals</div>
-<div class="check_box">Share your accomplishments</div>
-<div class="check_box">Earn GoalFish rewards and show your friends and family</div>
+<h3>RVA's Home For Hackers and Makers</h3>
+<div class="check_box">Space and Tools you don't have at your house</div>
+<div class="check_box">Workshops to learn new skills</div>
+<div class="check_box">Other Hackers to work with, learn from, and educate</div>
+</div>
+<div id="join" style="display:none;width=500px;">
+<h4>How to join hack.rva</h4>
+<p>Info coming soon!</p>
 </div>
 <div id="about" style="display:none;width:500px;">
 <h4>hack.rva has been in Richmond since 2009.</h4>
